// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rngBuilder creates a randomiser given seed 1 1`] = `
Array [
  0.500062950304724,
  0.5157397988987481,
  0.9226656041393675,
  0.3155057489209589,
  0.1551597700815554,
  0.9486529105223372,
  0.3748853226133821,
  0.3723766031610725,
  0.48958173894546503,
  0.6052440010489067,
]
`;

exports[`rngBuilder creates a randomiser given seed 2 1`] = `
Array [
  0.5001259004930327,
  0.5312583452396231,
  0.6624884909630028,
  0.8890491144007652,
  0.38940668720505356,
  0.6909172021995571,
  0.6007535305341597,
  0.06686430426008634,
  0.881952763041936,
  0.5476082643837688,
]
`;

exports[`rngBuilder creates a randomiser given seed 4 1`] = `
Array [
  0.5002518008696502,
  0.5625166903628308,
  0.8249769818095902,
  0.27809822845228443,
  0.2790498855242156,
  0.0634860098509784,
  0.4434312750686499,
  0.05855132221676207,
  0.5894388301739094,
  0.24544880754441228,
]
`;

exports[`rngBuilder creates a randomiser given seed 8 1`] = `
Array [
  0.500503601622885,
  0.6250333806092463,
  0.14995397095334576,
  0.058307676123992465,
  0.47901072620391166,
  0.9113757456446475,
  0.5750688020081886,
  0.8338097936552507,
  0.8361590078184752,
  0.8376564038539437,
]
`;

exports[`rngBuilder creates a randomiser given seed 16 1`] = `
Array [
  0.5010072108127659,
  0.7520182327721311,
  0.2882353561670136,
  0.3866406226033905,
  0.8962605120372634,
  0.19173304927342874,
  0.08497578978654365,
  0.3369975006992457,
  0.9351766044123043,
  0.10703910470638403,
]
`;

exports[`shuffleArray shuffles list ["a", "b", "c", "d"] 1`] = `
Array [
  "c",
  "a",
  "d",
  "b",
]
`;

exports[`shuffleArray shuffles list ["a", "b", "c"] 1`] = `
Array [
  "b",
  "a",
  "c",
]
`;

exports[`shuffleArray shuffles list ["a", "b"] 1`] = `
Array [
  "b",
  "a",
]
`;

exports[`shuffleArray shuffles list ["a"] 1`] = `
Array [
  "a",
]
`;
